seminar regular update

--- a/seminar.html
+++ b/seminar.html
@@ -115,24 +115,6 @@
                             <td>Paper Sharing (TBA)</td>
                         </tr> -->
                         <tr>
-                            <td>Mar. 13</td>
-                            <td>Siyu Jiao <br> Haojie Ding</td>
-                            <td>BJTU</td>
-                            <td>Paper Sharing (TBA)</td>
-                        </tr>
-                        <tr>
-                            <td>Mar. 20</td>
-                            <td>Zilin Wang <br> Kunyang Han</td>
-                            <td>BJTU</td>
-                            <td>Paper Sharing (TBA)</td>
-                        </tr>
-                        <tr>
-                            <td>Mar. 27</td>
-                            <td>Yihan Hu <br> Mengxue Qu</td>
-                            <td>BJTU</td>
-                            <td>Paper Sharing (TBA)</td>
-                        </tr>
-                        <tr>
                             <td>Apr. 3</td>
                             <td>Shiyin Zhang <br> Qiqi Gong</td>
                             <td>BJTU</td>
@@ -169,6 +151,40 @@
                         <!-- [<a href="">pdf</a>] -->
 
                         <tr>
+                            <td>Mar. 27</td>
+                            <td>Yihan Hu <br> Mengxue Qu</td>
+                            <td>BJTU</td>
+                            <td>
+                                Semantic Image Matting
+                                [<a href="./seminar/SIM_Yihan.pdf">pdf</a>] <br>
+                                Conditional Prompt Learning for Vision-Language Models
+                                [<a href="./seminar/CoCoOp_Mengxue.pdf">pdf</a>]
+                            </td>
+                        </tr>
+                        <tr>
+                            <td>Mar. 20</td>
+                            <td>Zilin Wang <br> Kunyang Han</td>
+                            <td>BJTU</td>
+                            <td>
+                                DAFormer: Improving Network Architectures and Training Strategies for
+                                Domain-Adaptive Semantic Segmentation
+                                [<a href="./seminar/DAFormer_zilin.pdf">pdf</a>] <br>
+                                Revitalize Region Feature for Democratizing Video-Language Pre-training
+                                [<a href="./seminar/VLP_kunyang.pdf">pdf</a>]
+                            </td>
+                        </tr>
+                        <tr>
+                            <td>Mar. 13</td>
+                            <td>Siyu Jiao <br> Haojie Ding</td>
+                            <td>BJTU</td>
+                            <td>
+                                Few-Shot Segmentation via Cycle-Consistent Transformer
+                                [<a href="./seminar/Few-Shot_Segmentation_via_Cycle-ConsistentTransformer_siyu.pdf">pdf</a>] <br>
+                                DN-DETR: Accelerate DETR Training by Introducing Query DeNoising
+                                [<a href="./seminar/DN_DETR_haojie.pdf">pdf</a>]
+                            </td>
+                        </tr>
+                        <tr>
                             <td>Feb. 20</td>
                             <td>Siyu Jiao <br>Kunyang Han</td>
                             <td>BJTU</td>
@@ -176,6 +192,7 @@
                                 Few-Shot Segmentation via Cycle-Consistent Transformer
                                 [<a href="./seminar/Few-Shot_Segmentation_via_Cycle-ConsistentTransformer_siyu.pdf">pdf</a>] <br>
                                 Open-Vocabulary Image Segmentation
+                                [<a href="./seminar/Open-vocab_kunyang.pdf">pdf</a>]
                             </td>
                         </tr>
                         <tr>
@@ -184,7 +201,7 @@
                             <td>BJTU</td>
                             <td>
                                 K-Net: Towards Unified Image Segmentation
-                                [<a href="./seminar/2.13paper_reading_haojie.pdf">pdf</a>] <br>
+                                [<a href="./seminar/K-Net_haojie.pdf">pdf</a>] <br>
                                 Vision Transformer with Deformable Attention
                                 [<a href="./seminar/DAT_yihan.pdf">pdf</a>]
                             </td>
