regular seminar update

--- a/seminar.html
+++ b/seminar.html
@@ -115,12 +115,6 @@
                             <td>Paper Sharing (TBA)</td>
                         </tr> -->
                         <tr>
-                            <td>Apr. 3</td>
-                            <td>Shiyin Zhang <br> Qiqi Gong</td>
-                            <td>BJTU</td>
-                            <td>Paper Sharing (TBA)</td>
-                        </tr>
-                        <tr>
                             <td>Apr. 10</td>
                             <td>Yan Fang <br> Zhongwei Ren</td>
                             <td>BJTU</td>
@@ -149,7 +143,18 @@
                     </thead>
                     <tbody> 
                         <!-- [<a href="">pdf</a>] -->
-
+                        
+                        <tr>
+                            <td>Apr. 10</td>
+                            <td>Shiyin Zhang <br> Qiqi Gong</td>
+                            <td>BJTU</td>
+                            <td>
+                                Focal Self-attention for Local-Global Interactions in Vision Transformers
+                                [<a href="./seminar/Focal Modulation Networks shiyin.pdf">pdf</a>] <br>
+                                Revisiting Multi-scale Feature Fusion for Semantic Segmentation
+                                [<a href="./seminar/Revisiting_Multiscale_Feature_qiqi.pdf">pdf</a>]
+                            </td>
+                        </tr>
                         <tr>
                             <td>Mar. 27</td>
                             <td>Yihan Hu <br> Mengxue Qu</td>
