regular seminar update

--- a/seminar.html
+++ b/seminar.html
@@ -115,12 +115,6 @@
                             <td>Paper Sharing (TBA)</td>
                         </tr> -->
                         <tr>
-                            <td>Apr. 10</td>
-                            <td>Yan Fang <br> Zhongwei Ren</td>
-                            <td>BJTU</td>
-                            <td>Paper Sharing (TBA)</td>
-                        </tr>
-                        <tr>
                             <td>Apr. 17</td>
                             <td>Zhiyuan Fang <br> Zekang Zhang</td>
                             <td>BIT</td>
@@ -144,6 +138,23 @@
                     <tbody> 
                         <!-- [<a href="">pdf</a>] -->
                         
+                        <tr>
+                            <td>Apr. 21</td>
+                            <td>Liyuan Wang</td>
+                            <td>Tsinghua</td>
+                            <td>Brain-inspired Continual Learning</td>
+                        </tr>
+                        <tr>
+                            <td>Apr. 17</td>
+                            <td>Yan Fang <br> Zhongwei Ren</td>
+                            <td>BJTU</td>
+                            <td>
+                                Rethinking Semantic Segmentation: A Prototype View
+                                [<a href="./seminar/Fangyan_Apr17Pre.pdf">pdf</a>] <br>
+                                Video K-Net: A Simple, Strong, and Unified Baseline for Video Segmentation
+                                [<a href="./seminar/Video_K_Net_zhongwei.pdf">pdf</a>]
+                            </td>
+                        </tr>
                         <tr>
                             <td>Apr. 10</td>
                             <td>Shiyin Zhang <br> Qiqi Gong</td>
