regular seminar update

--- a/seminar.html
+++ b/seminar.html
@@ -114,12 +114,12 @@
                             <td>BIT</td>
                             <td>Paper Sharing (TBA)</td>
                         </tr> -->
-                        <tr>
+                        <!-- <tr>
                             <td>Apr. 17</td>
                             <td>Zhiyuan Fang <br> Zekang Zhang</td>
                             <td>BIT</td>
                             <td>Paper Sharing (TBA)</td>
-                        </tr>
+                        </tr> -->
                     </tbody>
                 </table>
             </div>
@@ -139,10 +139,21 @@
                         <!-- [<a href="">pdf</a>] -->
                         
                         <tr>
-                            <td>Apr. 21</td>
+                            <td>May. 8</td>
+                            <td>Zhiyuan Fang</td>
+                            <td>BIT</td>
+                            <td>Learning What Not to Segment: A New Perspective on Few-Shot Segmentation
+                                [<a href="./seminar/20220508_fzy.pdf">pdf</a>]
+                            </td>
+                        </tr>
+                        
+                        <tr>
+                            <td>Apr. 24</td>
                             <td>Liyuan Wang</td>
                             <td>Tsinghua</td>
-                            <td>Brain-inspired Continual Learning</td>
+                            <td>[<span>Distinguished Lectures</span>] Brain-inspired Continual Learning
+                                [<a href="./seminar/brain-inspired_continual_learning_bjtu.pdf">pdf</a>]
+                            </td>
                         </tr>
                         <tr>
                             <td>Apr. 17</td>
@@ -238,7 +249,7 @@
                             <td>Tianlong Chen</td>
                             <td>UT Austin</td>
                             <td>
-                                How to be a qualified PhD?
+                                [<span>Distinguished Lectures</span>] How to be a qualified PhD?
                                 [<a href="./seminar/How_to_be_a_qualified_PhD_tianlong.pdf">pdf</a>]
                             </td>
                         </tr>
