seminar regular update

--- a/seminar.html
+++ b/seminar.html
@@ -120,6 +120,36 @@
                             <td>BIT</td>
                             <td>Paper Sharing (TBA)</td>
                         </tr> -->
+                        <tr>
+                            <td>Jun. 12</td>
+                            <td>Gengwei Zhang <br> Yan Fang <br> Zekang Zhang </td>
+                            <td>UTS <br> BJTU <br> BIT </td>
+                            <td>Continual / Semi-supervised Learning (CVPR22)</td>
+                        </tr>
+                        <tr>
+                            <td>Jun. 19</td>
+                            <td>Feng Zhu <br> Haojie Ding <br> Zhongwei Ren</td>
+                            <td>UTS <br> BJTU <br> BJTU</td>
+                            <td>Video and Image Segmentation (CVPR22)</td>
+                        </tr>
+                        <tr>
+                            <td>Jun. 26</td>
+                            <td>Zhiyuan Fang <br> Kunyang Han <br> Siyu Jiao</td>
+                            <td>BIT <br> BJTU <br> BJTU</td>
+                            <td>Few-shot / Open-set Segmentation (CVPR22)</td>
+                        </tr>
+                        <tr>
+                            <td>Jul. 3</td>
+                            <td>Mengxue Qu <br> Hongguang Zhu</td>
+                            <td>BJTU</td>
+                            <td>VL Modeling (CVPR22)</td>
+                        </tr>
+                        <tr>
+                            <td>Jul. 10</td>
+                            <td>Qiqi Gong <br> Shiyin Zhang <br> Zilin Wang</td>
+                            <td>BJTU</td>
+                            <td>Personal Topic (CVPR22)</td>
+                        </tr>
                     </tbody>
                 </table>
             </div>
@@ -137,7 +167,12 @@
                     </thead>
                     <tbody> 
                         <!-- [<a href="">pdf</a>] -->
-                        
+                        <tr>
+                            <td>Jun. 5</td>
+                            <td>Yanda Li <br> Yihan Hu</td>
+                            <td>UTS <br> BJTU</td>
+                            <td>Matting (CVPR22)[<a href="./seminar/matting_cvpr22_0.pdf">pdf1</a>][<a href="./seminar/matting_cvpr22_HumanInstanceMatting.pdf">pdf2</a>]</td>
+                        </tr>
                         <tr>
                             <td>May. 8</td>
                             <td>Zhiyuan Fang</td>
