--- a/index.html
+++ b/index.html
@@ -195,6 +195,20 @@
                 <ul class="tl">
                     <li class="tl-item" ng-repeat="item in retailer_history">
 
+                        <div class="item-title">[ DATASET ]</div>
+                        <div class="item-detail"> We release <a href="https://github.com/VIPSeg-Dataset/VIPSeg-Dataset">VIPSeg</a>, the first large-scale dataset for <strong>VI</strong>deo <strong>P</strong>anoptic <strong>Seg</strong>mentation.
+
+                        </div>
+                    </li>
+                    <li class="tl-item" ng-repeat="item in retailer_history">
+
+                        <div class="item-title">[ DATASET ]</div>
+                        <div class="item-detail"> We release <a href="https://xiaodongsuper.github.io/M5Product_dataset/">M5Product</a>, a large-scale multi-modal pre-training dataset with 5 modalities.
+
+                        </div>
+                    </li>
+                    <li class="tl-item" ng-repeat="item in retailer_history">
+
                         <div class="item-title">[ AWARD ]</div>
                         <div class="item-detail"> I was selected as MIT TR35 - MIT Technology Review, 35 Innovators Under 35, China.
 
