--- a/publication.html
+++ b/publication.html
@@ -205,7 +205,7 @@
                 </strong> <br>
                     Jiaxu Miao, Xiaohan Wang, Yu Wu, Wei Li, Xu Zhang, <strong>Yunchao Wei</strong>, Yi Yang. <br>
                     IEEE Conference on Computer Vision and Pattern Recognition (<strong>CVPR</strong>), 2022  
-                    <a href="https://github.com/VIPSeg-Dataset/VIPSeg-Dataset">[PROJECT]</a><br>
+                    <a href="https://github.com/VIPSeg-Dataset/VIPSeg-Dataset">[Project]</a><br>
             </li>
             <li>
                 <strong>
@@ -213,7 +213,7 @@
                 </strong> <br>
                     Xiao Dong, Xunlin Zhan, Yangxin Wu, <strong>Yunchao Wei</strong>, Michael C. Kampffmeyer, Xiaoyong Wei, Minlong Lu, Yaowei Wang, Xiaodan Liang.  <br>
                      IEEE Conference on Computer Vision and Pattern Recognition (<strong>CVPR</strong>), 2022 
-                    <a href="https://xiaodongsuper.github.io/M5Product_dataset/">[PROJECT]</a><br>
+                    <a href="https://xiaodongsuper.github.io/M5Product_dataset/">[Project]</a><br>
                 
             </li>
             <li>
