seminar regular update

--- a/seminar.html
+++ b/seminar.html
@@ -121,12 +121,6 @@
                             <td>Paper Sharing (TBA)</td>
                         </tr> -->
                         <tr>
-                            <td>Jun. 12</td>
-                            <td>Gengwei Zhang <br> Yan Fang <br> Zekang Zhang </td>
-                            <td>UTS <br> BJTU <br> BIT </td>
-                            <td>Continual / Semi-supervised Learning (CVPR22)</td>
-                        </tr>
-                        <tr>
                             <td>Jun. 19</td>
                             <td>Feng Zhu <br> Haojie Ding <br> Zhongwei Ren</td>
                             <td>UTS <br> BJTU <br> BJTU</td>
@@ -168,10 +162,18 @@
                     <tbody> 
                         <!-- [<a href="">pdf</a>] -->
                         <tr>
+                            <td>Jun. 12</td>
+                            <td>Gengwei Zhang <br> Zekang Zhang <br> Yan Fang </td>
+                            <td>UTS <br> BIT <br> BJTU </td>
+                            <td>Continual Learning (CVPR22) [<a href="./seminar/paper_reading_0612_gengwei.pdf">pdf1</a>] [<a href="./seminar/0611_zekang_TIL&CISS.pdf">pdf2</a>] <br>
+                                Semi-supervised Learning (CVPR22) [<a href="./seminar/semi_fangyan_CVPR2023.pdf">pdf3</a>]
+                            </td>
+                        </tr>
+                        <tr>
                             <td>Jun. 5</td>
                             <td>Yanda Li <br> Yihan Hu</td>
                             <td>UTS <br> BJTU</td>
-                            <td>Matting (CVPR22)[<a href="./seminar/matting_cvpr22_0.pdf">pdf1</a>][<a href="./seminar/matting_cvpr22_HumanInstanceMatting.pdf">pdf2</a>]</td>
+                            <td>Matting (CVPR22) [<a href="./seminar/matting_cvpr22_0.pdf">pdf1</a>] [<a href="./seminar/matting_cvpr22_HumanInstanceMatting.pdf">pdf2</a>]</td>
                         </tr>
                         <tr>
                             <td>May. 8</td>
