seminar regular update

--- a/seminar.html
+++ b/seminar.html
@@ -121,22 +121,10 @@
                             <td>Paper Sharing (TBA)</td>
                         </tr> -->
                         <tr>
-                            <td>Jun. 19</td>
-                            <td>Feng Zhu <br> Haojie Ding <br> Zhongwei Ren</td>
-                            <td>UTS <br> BJTU <br> BJTU</td>
-                            <td>Video and Image Segmentation (CVPR22)</td>
-                        </tr>
-                        <tr>
-                            <td>Jun. 26</td>
-                            <td>Zhiyuan Fang <br> Kunyang Han <br> Siyu Jiao</td>
-                            <td>BIT <br> BJTU <br> BJTU</td>
-                            <td>Few-shot / Open-set Segmentation (CVPR22)</td>
-                        </tr>
-                        <tr>
                             <td>Jul. 3</td>
-                            <td>Mengxue Qu <br> Hongguang Zhu</td>
+                            <td>Mengxue Qu <br> Hongguang Zhu <br> Kunyang Han</td>
                             <td>BJTU</td>
-                            <td>VL Modeling (CVPR22)</td>
+                            <td>VL Modeling / Open-set (CVPR22)</td>
                         </tr>
                         <tr>
                             <td>Jul. 10</td>
@@ -161,19 +149,47 @@
                     </thead>
                     <tbody> 
                         <!-- [<a href="">pdf</a>] -->
+
+                        <tr>
+                            <td>Jun. 26</td>
+                            <td>Zhongwei Ren <br> Zhiyuan Fang <br> Siyu Jiao</td>
+                            <td>BJTU <br> BIT <br> BJTU</td>
+                            <td>Video Segmentation (CVPR22)
+                                    [<a href="./seminar/6.19_seminar_CVPR22_video_zhongwei.pdf">pdf1</a>] <br>
+                                Few-shot Segmentation (CVPR22)
+                                    [<a href="./seminar/20220626_fzy.pdf">pdf2</a>]
+                                    [<a href="./seminar/CVPR22_few-shot_siyu.pdf">pdf3</a>]
+                            </td>
+                        </tr>
+                        <tr>
+                            <td>Jun. 19</td>
+                            <td>Feng Zhu <br> Haojie Ding </td>
+                            <td>UTS <br> BJTU</td>
+                            <td>Instance Segmentation (CVPR22)
+                                    [<a href="./seminar/Vision&LearningSeminar-FengZhu.pdf">pdf1</a>] <br>
+                                Semantic / Panoptic Segmentation (CVPR22)
+                                    [<a href="./seminar/6-19_CVPR22_semantic_panoptic_haojie.pdf">pdf2</a>]
+                            </td>
+                        </tr>
                         <tr>
                             <td>Jun. 12</td>
                             <td>Gengwei Zhang <br> Zekang Zhang <br> Yan Fang </td>
                             <td>UTS <br> BIT <br> BJTU </td>
-                            <td>Continual Learning (CVPR22) [<a href="./seminar/paper_reading_0612_gengwei.pdf">pdf1</a>] [<a href="./seminar/0611_zekang_TIL&CISS.pdf">pdf2</a>] <br>
-                                Semi-supervised Learning (CVPR22) [<a href="./seminar/semi_fangyan_CVPR2023.pdf">pdf3</a>]
+                            <td>Continual Learning (CVPR22) 
+                                    [<a href="./seminar/paper_reading_0612_gengwei.pdf">pdf1</a>] 
+                                    [<a href="./seminar/0611_zekang_TIL&CISS.pdf">pdf2</a>] <br>
+                                Semi-supervised Learning (CVPR22) 
+                                    [<a href="./seminar/semi_fangyan_CVPR2023.pdf">pdf3</a>]
                             </td>
                         </tr>
                         <tr>
                             <td>Jun. 5</td>
                             <td>Yanda Li <br> Yihan Hu</td>
                             <td>UTS <br> BJTU</td>
-                            <td>Matting (CVPR22) [<a href="./seminar/matting_cvpr22_0.pdf">pdf1</a>] [<a href="./seminar/matting_cvpr22_HumanInstanceMatting.pdf">pdf2</a>]</td>
+                            <td>Matting (CVPR22) 
+                                    [<a href="./seminar/matting_cvpr22_0.pdf">pdf1</a>] 
+                                    [<a href="./seminar/matting_cvpr22_HumanInstanceMatting.pdf">pdf2</a>]
+                            </td>
                         </tr>
                         <tr>
                             <td>May. 8</td>
