seminar regular update

--- a/seminar.html
+++ b/seminar.html
@@ -121,14 +121,8 @@
                             <td>Paper Sharing (TBA)</td>
                         </tr> -->
                         <tr>
-                            <td>Jul. 3</td>
-                            <td>Mengxue Qu <br> Hongguang Zhu <br> Kunyang Han</td>
-                            <td>BJTU</td>
-                            <td>VL Modeling / Open-set (CVPR22)</td>
-                        </tr>
-                        <tr>
                             <td>Jul. 10</td>
-                            <td>Qiqi Gong <br> Shiyin Zhang <br> Zilin Wang</td>
+                            <td>Mengxue Qu <br> Qiqi Gong <br> Shiyin Zhang <br> Zilin Wang</td>
                             <td>BJTU</td>
                             <td>Personal Topic (CVPR22)</td>
                         </tr>
@@ -150,6 +144,16 @@
                     <tbody> 
                         <!-- [<a href="">pdf</a>] -->
 
+                        <tr>
+                            <td>Jul. 3</td>
+                            <td>Hongguang Zhu <br> Kunyang Han</td>
+                            <td>BJTU</td>
+                            <td>VL Modeling Pre-training (CVPR22)
+                                    [<a href="./seminar/CVPR22_VLP_seminar.pdf">pdf1</a>] <br>
+                                Open-set (CVPR22)
+                                    [<a href="./seminar/CVPR22_open.pdf">pdf2</a>]
+                            </td>
+                        </tr>
                         <tr>
                             <td>Jun. 26</td>
                             <td>Zhongwei Ren <br> Zhiyuan Fang <br> Siyu Jiao</td>
