--- a/index.html
+++ b/index.html
@@ -195,6 +195,13 @@
                 <ul class="tl">
                     <li class="tl-item" ng-repeat="item in retailer_history">
 
+                        <div class="item-title">[ PAPER ]</div>
+                        <div class="item-detail"> Three papers are accepted to ECCV 2022, congrats to Feng, Kunyang and Mengxue.
+
+                        </div>
+                    </li>
+                    <li class="tl-item" ng-repeat="item in retailer_history">
+
                         <div class="item-title">[ DATASET ]</div>
                         <div class="item-detail"> We release <a href="https://github.com/VIPSeg-Dataset/VIPSeg-Dataset">VIPSeg</a>, the first large-scale dataset for <strong>VI</strong>deo <strong>P</strong>anoptic <strong>Seg</strong>mentation.
 
@@ -204,6 +211,13 @@
 
                         <div class="item-title">[ DATASET ]</div>
                         <div class="item-detail"> We release <a href="https://xiaodongsuper.github.io/M5Product_dataset/">M5Product</a>, a large-scale multi-modal pre-training dataset with 5 modalities.
+
+                        </div>
+                    </li>
+                     <li class="tl-item" ng-repeat="item in retailer_history">
+
+                        <div class="item-title">[ PAPER ]</div>
+                        <div class="item-detail"> Three papers are accepted to CVPR 2022, congrats to Jiaxu, Xiao and Pengtao.
 
                         </div>
                     </li>
