--- a/index.html
+++ b/index.html
@@ -231,7 +231,7 @@
                     <li class="tl-item" ng-repeat="item in retailer_history">
 
                         <div class="item-title">[ PAPER ]</div>
-                        <div class="item-detail"> Our work on video object segmentation (<a href="https://arxiv.org/abs/2106.02638">AOT</a>) and few-shot segmentation (<a href="https://arxiv.org/abs/2106.02320">CyCTR</a>) are accepted by NeurIPS 2021. Congrats Zongxin and Gengwei!
+                        <div class="item-detail"> Our work on video object segmentation (<a href="https://arxiv.org/abs/2106.02638">AOT</a>) and few-shot segmentation (<a href="https://arxiv.org/abs/2106.02320">CyCTR</a>) are accepted to NeurIPS 2021. Congrats Zongxin and Gengwei!
                         </div>
                     </li>
                     <li class="tl-item" ng-repeat="item in retailer_history">
