seminar regular update

--- a/seminar.html
+++ b/seminar.html
@@ -121,10 +121,10 @@
                             <td>Paper Sharing (TBA)</td>
                         </tr> -->
                         <tr>
-                            <td>Jul. 10</td>
-                            <td>Mengxue Qu <br> Qiqi Gong <br> Shiyin Zhang <br> Zilin Wang</td>
-                            <td>BJTU</td>
-                            <td>Personal Topic (CVPR22)</td>
+                            <td>Around Sep.</td>
+                            <td>TBA</td>
+                            <td>TBA</td>
+                            <td>TBA</td>
                         </tr>
                     </tbody>
                 </table>
@@ -144,6 +144,19 @@
                     <tbody> 
                         <!-- [<a href="">pdf</a>] -->
 
+                        <tr>
+                            <td>Jul. 10</td>
+                            <td>Mengxue Qu <br> Qiqi Gong <br> Zilin Wang</td>
+                            <td>BJTU</td>
+                            <td>
+                                Referring Related Tasks (CVPR22)
+                                    [<a href="./seminar/CVPR22_Referring_related_tasks_mengxue.pdf">pdf1</a>] <br>
+                                Ultra High Resolution (CVPR22)
+                                    [<a href="./seminar/CVPR22_UltraHighResolution_qiqi.pdf">pdf2</a>] <br>
+                                Domain Adaptation (CVPR22)
+                                    [<a href="./seminar/CVPR22_DomainAdaptation_zilin.pdf">pdf3</a>]
+                            </td>
+                        </tr>
                         <tr>
                             <td>Jul. 3</td>
                             <td>Hongguang Zhu <br> Kunyang Han</td>
