--- a/publication.html
+++ b/publication.html
@@ -200,6 +200,24 @@
         <h3 class="title subtitle"> 2022 </h3>
         <ol>
              <li>
+                <strong>SiRi: A Simple Selective Retraining Mechanism for Transformer-based Visual Grounding</strong><br/>
+                Mengxue Qu, Yu Wu, Wu Liu, Qiqi Gong, Xiaodan Liang, Olga Russakovsky, Yao Zhao, <strong>Yunchao Wei</strong><br/>
+                European Conference on Computer Vision (<strong>ECCV</strong>), 2022
+                <a href="https://arxiv.org/abs/2207.13325">[PDF]</a>
+             </li>
+             <li>
+                <strong>Instance As Identity: A Generic Online Paradigm for Video Instance Segmentation</strong><br/>
+                Feng Zhu, Zongxin Yang, Xin Yu, Yi Yang, <strong>Yunchao Wei</strong><br/>
+                European Conference on Computer Vision (<strong>ECCV</strong>), 2022
+                
+             </li>
+             <li>
+                <strong>Slim Scissors: Segmenting Thin Object from Synthetic Background</strong><br/>
+                Kunyang Han, Jun Hao Liew, Jiashi Feng, Huawei Tian, Yao Zhao, <strong>Yunchao Wei</strong><br/>
+                European Conference on Computer Vision (<strong>ECCV</strong>), 2022
+                <a href="https://kunyanghan.github.io/SlimScissors/">[Project]</a>
+             </li>
+             <li>
                 <strong>
                     Large-Scale Video Panoptic Segmentation in the Wild: A Benchmark. 
                 </strong> <br>
