--- a/people.html
+++ b/people.html
@@ -165,7 +165,7 @@
         <div class="row">  
             <div class="col-md-3 team-grids">
                 <div class="team-img">
-                    <img class="student-img" src="images/people/siyu.jpeg" alt="">
+                    <img class="student-img" src="images/people/siyu.jpg" alt="">
                     <h4>Siyu Jiao</h4>
                     <p>21120325 AT bjtu.edu.cn <br>
                     (2021, co-supervised stu)</p>
