--- a/people.html
+++ b/people.html
@@ -205,7 +205,7 @@
                 <div class="team-img">
                     <img class="student-img" src="images/people/haojie.jpeg" alt="">
                     <h4>Haojie Ding</h4>
-                    <p>18231521 AT bjtu.edu.cn <br>
+                    <p>haojieding5 AT gmail.cn <br>
                     (2022)</p>
                 </div>
             </div>
