--- a/index.html
+++ b/index.html
@@ -196,6 +196,13 @@
                     <li class="tl-item" ng-repeat="item in retailer_history">
 
                         <div class="item-title">[ PAPER ]</div>
+                        <div class="item-detail"> Two papers are accepted to NeurIPS 2022, congrats to Siyu & Gengwei, and Zekang.
+
+                        </div>
+                    </li>
+                    <li class="tl-item" ng-repeat="item in retailer_history">
+
+                        <div class="item-title">[ PAPER ]</div>
                         <div class="item-detail"> Three papers are accepted to ECCV 2022, congrats to Feng, Kunyang and Mengxue.
 
                         </div>
