--- a/publication.html
+++ b/publication.html
@@ -199,6 +199,16 @@
     
         <h3 class="title subtitle"> 2022 </h3>
         <ol>
+            <li>
+                <strong> Mask Matching Transformer for Few-Shot Segmentation </strong> <br>
+                Siyu Jiao, Gengwei Zhang, Shant Navasardyan, Ling Chen, Yao Zhao, <strong>Yunchao Wei</strong>, Humphrey Shi<br>
+                Neural Information Processing Systems (<strong>NeurIPS</strong>), 2022
+            </li>
+            <li>
+                <strong>Mining Unseen Classes via Regional Objectness: A Simple Baseline for Incremental Segmentation</strong> <br>
+                Zekang Zhang, Guangyu Gao, Zhiyuan Fang, Jianbo Jiao, <strong>Yunchao Wei</strong> <br>
+                Neural Information Processing Systems (<strong>NeurIPS</strong>), 2022
+            </li>
              <li>
                 <strong>SiRi: A Simple Selective Retraining Mechanism for Transformer-based Visual Grounding</strong><br/>
                 Mengxue Qu, Yu Wu, Wu Liu, Qiqi Gong, Xiaodan Liang, Olga Russakovsky, Yao Zhao, <strong>Yunchao Wei</strong><br/>
