--- a/people.html
+++ b/people.html
@@ -203,7 +203,7 @@
         <div class="row">
             <div class="col-md-3 team-grids">
                 <div class="team-img">
-                    <img class="student-img" src="images/people/haojie.jpeg" alt="">
+                    <img class="student-img" src="images/people/haojie.jpg" alt="">
                     <h4>Haojie Ding</h4>
                     <p>haojieding5 AT gmail.cn <br>
                     (2022)</p>
