seminar regular update

--- a/seminar.html
+++ b/seminar.html
@@ -108,24 +108,60 @@
                     </tr>
                     </thead>
                     <tbody> 
-                        <!-- <tr>
-                            <td>Jul. 23</td>
-                            <td>Zhiyuan Fang <br>Zekang Zhang</td>
-                            <td>BIT</td>
+                        <tr>
+                            <td>Sep. 25</td>
+                            <td>Haojie Ding <br>Zhongwei Ren</td>
+                            <td>BJTU</td>
                             <td>Paper Sharing (TBA)</td>
-                        </tr> -->
+                        </tr>
+                        <tr>
+                            <td>Oct. 9</td>
+                            <td>Siyu Jiao <br>Xinhao Zhong</td>
+                            <td>BJTU</td>
+                            <td>Paper Sharing (TBA)</td>
+                        </tr>
+                        <tr>
+                            <td>Oct. 16</td>
+                            <td>Qiqi Gong <br>Ziling Wang</td>
+                            <td>BJTU</td>
+                            <td>Paper Sharing (TBA)</td>
+                        </tr>
+                        <tr>
+                            <td>Oct. 23</td>
+                            <td>Hongguang Zhu <br>Weiqi Jin</td>
+                            <td>BJTU</td>
+                            <td>Paper Sharing (TBA)</td>
+                        </tr>
+                        <tr>
+                            <td>Oct. 30</td>
+                            <td>Yihan Hu <br>Yan Fang</td>
+                            <td>BJTU</td>
+                            <td>Paper Sharing (TBA)</td>
+                        </tr>
+                        <tr>
+                            <td>Nov. 6</td>
+                            <td>Qian Yang <br>Chenyi Zhang</td>
+                            <td>BJTU</td>
+                            <td>Paper Sharing (TBA)</td>
+                        </tr>
+                        <tr>
+                            <td>Nov. 13</td>
+                            <td>Yanda Li <br>Gengwei Zhang</td>
+                            <td>UTS</td>
+                            <td>Paper Sharing (TBA)</td>
+                        </tr>
+                        <tr>
+                            <td>Nov. 20</td>
+                            <td>Zekang Zhang <br>Shiyin Zhang <br>Feng Zhu</td>
+                            <td>BIT <br>BJTU <br>UTS</td>
+                            <td>Paper Sharing (TBA)</td>
+                        </tr>
                         <!-- <tr>
                             <td>Apr. 17</td>
                             <td>Zhiyuan Fang <br> Zekang Zhang</td>
                             <td>BIT</td>
                             <td>Paper Sharing (TBA)</td>
                         </tr> -->
-                        <tr>
-                            <td>Around Sep.</td>
-                            <td>TBA</td>
-                            <td>TBA</td>
-                            <td>TBA</td>
-                        </tr>
                     </tbody>
                 </table>
             </div>
@@ -144,6 +180,17 @@
                     <tbody> 
                         <!-- [<a href="">pdf</a>] -->
 
+                        <tr>
+                            <td>Sep. 18</td>
+                            <td>Mengxue Qu <br>Kunyang Han</td>
+                            <td>BJTU</td>
+                            <td>
+                                MILAN: Masked Image Pretraining on Language Assisted Representation
+                                    [<a href="./seminar/MILAN_paper_reading_mengxue.pdf">pdf</a>] <br>
+                                PromptDet: Towards Open-Vocabulary Detection using Uncurated Images
+                                    [<a href="./seminar/PromptDet_kunyang.pdf">pdf</a>]
+                            </td>
+                        </tr>
                         <tr>
                             <td>Jul. 10</td>
                             <td>Mengxue Qu <br> Qiqi Gong <br> Zilin Wang</td>
