seminar regular update

--- a/seminar.html
+++ b/seminar.html
@@ -109,51 +109,51 @@
                     </thead>
                     <tbody> 
                         <tr>
-                            <td>Sep. 25</td>
-                            <td>Haojie Ding <br>Zhongwei Ren</td>
-                            <td>BJTU</td>
+                            <td>Oct. 9</td> 
+                            <td>Zhongwei Ren <br>Feng Zhu</td>
+                            <td>BJTU <br> UTS</td>
                             <td>Paper Sharing (TBA)</td>
                         </tr>
                         <tr>
-                            <td>Oct. 9</td>
+                            <td>Oct. 16</td>
                             <td>Siyu Jiao <br>Xinhao Zhong</td>
                             <td>BJTU</td>
                             <td>Paper Sharing (TBA)</td>
                         </tr>
                         <tr>
-                            <td>Oct. 16</td>
+                            <td>Oct. 23</td>
                             <td>Qiqi Gong <br>Ziling Wang</td>
                             <td>BJTU</td>
                             <td>Paper Sharing (TBA)</td>
                         </tr>
                         <tr>
-                            <td>Oct. 23</td>
+                            <td>Oct. 30</td>
                             <td>Hongguang Zhu <br>Weiqi Jin</td>
                             <td>BJTU</td>
                             <td>Paper Sharing (TBA)</td>
                         </tr>
                         <tr>
-                            <td>Oct. 30</td>
+                            <td>Nov. 6</td>
                             <td>Yihan Hu <br>Yan Fang</td>
                             <td>BJTU</td>
                             <td>Paper Sharing (TBA)</td>
                         </tr>
                         <tr>
-                            <td>Nov. 6</td>
+                            <td>Nov. 13</td>
                             <td>Qian Yang <br>Chenyi Zhang</td>
                             <td>BJTU</td>
                             <td>Paper Sharing (TBA)</td>
                         </tr>
                         <tr>
-                            <td>Nov. 13</td>
+                            <td>Nov. 20</td>
                             <td>Yanda Li <br>Gengwei Zhang</td>
                             <td>UTS</td>
                             <td>Paper Sharing (TBA)</td>
                         </tr>
                         <tr>
-                            <td>Nov. 20</td>
-                            <td>Zekang Zhang <br>Shiyin Zhang <br>Feng Zhu</td>
-                            <td>BIT <br>BJTU <br>UTS</td>
+                            <td>Nov. 27</td>
+                            <td>Zekang Zhang <br>Shiyin Zhang</td>
+                            <td>BIT <br>BJTU</td>
                             <td>Paper Sharing (TBA)</td>
                         </tr>
                         <!-- <tr>
@@ -180,6 +180,15 @@
                     <tbody> 
                         <!-- [<a href="">pdf</a>] -->
 
+                        <tr>
+                            <td>Sep. 25</td>
+                            <td>Haojie Ding</td>
+                            <td>BJTU</td>
+                            <td>
+                                Mask DINO: Towards A Unified Transformer-based Framework for Object Detection and Segmentation
+                                [<a href="./seminar/MaskDino_haojie_9_25.pdf">pdf</a>]
+                            </td>
+                        </tr>
                         <tr>
                             <td>Sep. 18</td>
                             <td>Mengxue Qu <br>Kunyang Han</td>
